@@ -18,6 +18,10 @@ c++decl> declare f as reference function
 void f() bitand;
 c++decl> declare f as rvalue reference function
 void f() and;
+c++decl> declare lambda capturing [reference by default]
+[bitand]
+c++decl> declare lambda capturing [reference to x]
+[bitand x]
 c++decl> declare ! as operator (r as reference to const S) returning bool
 bool operator not(const S bitand r);
 c++decl> declare != as operator (r as reference to const S, int) returning bool
