@@ -6,6 +6,8 @@ struct S
 
 declare f as reference function
 declare f as rvalue reference function
+declare lambda capturing [reference by default]
+declare lambda capturing [reference to x]
 declare ! as operator (r as reference to const S) returning bool
 declare != as operator (r as reference to const S, int) returning bool
 declare & as operator (r as reference to const S, x as int) returning S
