@@ -12,6 +12,10 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 14.1
 
+** Alternative token lambda captures
+Lambda captures now correctly print alternative tokens when the option is
+enabled.
+
 ** Alternative token reference functions
 Reference and rvalue reference functions now correctly print alternative tokens
 when the option is enabled.
